# yfind_aiplatform

./: .gitignore  AGENTS.md  README.md  ai-scaffold.config.json  design.md  project.md
.agents/agents/: backend-tdd-engineer.md  code-reviewer.md  contract-architect.md  contract-change-guard.md  frontend-engineer.md  integration-checker.md  qa-tester.md  tech-lead-orchestrator.md  test-designer.md
.codex/: MIGRATION.md  README.md
.codex/agent-memory/: README.md
.codex/agents/: backend-tdd-engineer.md  code-reviewer.md  contract-architect.md  contract-change-guard.md  frontend-engineer.md  integration-checker.md  qa-tester.md  tech-lead-orchestrator.md  test-designer.md
.codex/docker-config/: README.md
ai-adapter/: README.md  pyproject.toml
ai-adapter/app/: __init__.py  main.py
ai-adapter/app/api/: health.py  training.py
ai-adapter/app/core/: __init__.py  config.py
ai-adapter/app/schemas/: __init__.py  health.py
ai-adapter/tests/: test_health.py
backend/: Dockerfile  README.md  pom.xml
deploy/: README.md  docker-compose.postgres.yml
docs/: ai-scaffold-migration.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
scripts/: check-build-feature-prereqs.sh  check-code-review-verdict.sh  check-feature-artifacts.sh  check-plan-approved.sh  check-plan-approved.sh.bak-20260414-091930  check-reuse-duplication.sh  check-task-traceability.sh  check-work-item-link.sh
(+551 files in other folders)
