[project]
name = "yfind-aiplatform-ai-adapter"
version = "0.1.0"
description = "FastAPI AI/MLOps adapter baseline for YFI Industrial AI Small Model Platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
]
