[project]
name = "yfind-aiplatform-ai-adapter"
version = "0.1.0"
description = "FastAPI AI/MLOps adapter baseline for YFI Industrial AI Small Model Platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "pydantic>=2.13.0,<3.0.0",
  "pydantic-settings>=2.14.0,<3.0.0",
  "uvicorn[standard]>=0.47.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
]
